Fix CSS alignment for the icon on the delete comment button

--- a/src/scss/modules/comments.scss
+++ b/src/scss/modules/comments.scss
@@ -95,6 +95,6 @@
 
   .icon {
     font-size: 12px;
-    vertical-align: bottom;
+    vertical-align: -0.125em;
   }
 }
